--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/MattAHarrington/cubr-cli#readme",
   "dependencies": {
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.8.20",
     "boxen": "^4.2.0",
     "chalk": "^4.1.0",
     "yargs": "^15.3.1"
