Neo-blessed added

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.10.5",
     "blessed": "^0.1.81",
+    "neo-blessed": "^0.2.0",
     "react": "^16.13.1",
     "react-blessed": "0.6.1",
     "react-devtools-core": "^3.0.0",
